--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>website</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_qq0pk8zibng.css">
   </head>
   <body>
     <div id="app"></div>
