--- a/website/src/pages/index.html
+++ b/website/src/pages/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>website</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_qq0pk8zibng.css">
+    <title>headPhones</title>
 </head>
 <body>
     <div id="app"></div>
