--- a/admin/index.html
+++ b/admin/index.html
@@ -2,11 +2,12 @@
 <html lang="zh-CN">
 
 <head>
-    <title>iView admin</title>
+    <title>广州市白云区华义电子厂 - 后台管理系统</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
     <link rel="stylesheet" href="/dist/main.css">
     <link rel="stylesheet" name="theme" href="">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_q9lu14w25.css">
     <link rel="icon" href="./td_icon.ico" type="image/x-icon" />
 </head>
 
