多语音实现

--- a/website/index.html
+++ b/website/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>website</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_qq0pk8zibng.css">
+    <title>广州市白云区华义电子厂</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_najvugv2col.css">
   </head>
   <body>
     <div id="app"></div>
