--- a/website/src/pages/index.html
+++ b/website/src/pages/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_qq0pk8zibng.css">
-    <title>headPhones</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_najvugv2col.css">
+    <meta name="Keywords" content="广州市白云区华义电子厂" />
+    <meta name="Description" content="广州市白云区华义电子厂" />
+
+    <title></title>
 </head>
 <body>
     <div id="app"></div>
