加入移动端项目

--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>广州市白云区华义电子厂</title>
+    <script>
+      if (/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)) {
+        location.href = '/mobile.html'
+      }
+    </script>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_najvugv2col.css">
   </head>
   <body>
