--- a/website/mobile.html
+++ b/website/mobile.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1, maximum-scale=1.0, user-scalable=no,minimal-ui" />
     <title>广州市白云区华义电子厂</title>
+    <link rel="icon" href="/static/logo.png" type="image/x-icon" />
     <script>
       if (!/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)) {
         location.href = '/index.html'
