--- a/website/src/pages/index.html
+++ b/website/src/pages/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_najvugv2col.css">
     <meta name="Keywords" content="广州市白云区华义电子厂" />
     <meta name="Description" content="广州市白云区华义电子厂" />
+    <link rel="icon" href="/static/logo.png" type="image/x-icon" />
     <script>
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)) {
         location.href = '/mobile.html'
